# velesdb

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  PR_DESCRIPTION_V1.1.0.md  README.md  bench_column_results.txt  bench_graph_results.txt  bench_hnsw_results.txt  bench_parser_results.txt  bench_simd.txt  bench_simd_results.txt  deny.toml  sonar-project.properties  test_results.txt
crates/velesdb-cli/: Cargo.toml  README.md
crates/velesdb-cli/src/: graph.rs  import.rs  import_tests.rs  license.rs  main.rs  repl.rs  repl_output.rs  session.rs
crates/velesdb-cli/tests/: cli_integration_tests.rs  e2e_complete.rs  graph_commands_tests.rs  traverse_stream_tests.rs
crates/velesdb-cli/wix/: License.rtf  main.wxs
crates/velesdb-core/: Cargo.toml  README.md
crates/velesdb-core/benches/: aggregation_benchmark.rs  bm25_benchmark.rs  column_filter_benchmark.rs  concurrency_benchmark.rs  dual_precision_benchmark.rs  edge_store_benchmark.rs  gpu_benchmark.rs  hnsw_benchmark.rs  hnsw_comparison_benchmark.rs  hnsw_tuning.rs  import_benchmark.rs  match_parser_benchmark.rs  orderby_similarity_benchmark.rs  overhead_benchmark.rs  parallel_benchmark.rs  perf_benchmark.rs  portable_simd_eval.rs  prefetch_tuning_benchmark.rs  property_index_benchmark.rs  quantization_benchmark.rs  recall_benchmark.rs  recall_comprehensive.rs  scalability_benchmark.rs  search_benchmark.rs  simd_benchmark.rs  smoke_test.rs  trigram_benchmark.rs  velesql_benchmark.rs  velesql_execution_benchmark.rs  wis1_validation.rs
crates/velesdb-core/examples/: crash_driver.rs
crates/velesdb-core/src/: alloc_guard.rs  alloc_guard_tests.rs  collection.rs  column_store.rs  column_store_tests.rs  config.rs  config_tests.rs  distance.rs  distance_tests.rs  error.rs  error_tests.rs  filter.rs  filter_like_tests.rs  filter_tests.rs  gpu.rs  gpu_tests.rs  guardrails.rs  guardrails_tests.rs  half_precision.rs  half_precision_tests.rs  lib.rs  metrics.rs  metrics_tests.rs  perf_optimizations.rs  perf_optimizations_tests.rs  point.rs  point_tests.rs  quantization.rs  quantization_tests.rs  simd.rs  simd_avx512.rs  simd_avx512_tests.rs  simd_dispatch.rs  simd_dispatch_tests.rs  simd_epic073_tests.rs  simd_explicit.rs  simd_explicit_tests.rs  simd_native.rs  simd_native_tests.rs  simd_neon.rs  (+11 more)
crates/velesdb-core/src/agent/: episodic_memory.rs  error.rs  memory.rs  memory_tests.rs  mod.rs  procedural_memory.rs  reinforcement.rs  reinforcement_tests.rs  semantic_memory.rs  snapshot.rs  snapshot_tests.rs  temporal_index.rs  temporal_index_tests.rs  ttl.rs  ttl_tests.rs
crates/velesdb-core/src/cache/: bloom.rs  bloom_tests.rs  deadlock_tests.rs  lockfree.rs  lockfree_tests.rs  lru.rs  lru_optimization_tests.rs  mod.rs  performance_tests.rs  tests.rs
crates/velesdb-core/src/collection/: async_ops.rs  async_ops_tests.rs  core.rs  metadata_only_tests.rs  mod.rs  search.rs  tests.rs  types.rs
crates/velesdb-core/src/column_store/: batch.rs  batch_tests.rs  filter.rs  mod.rs  string_table.rs  types.rs
crates/velesdb-core/src/compression/: dictionary.rs  mod.rs  tests.rs
crates/velesdb-core/src/filter/: builders.rs  conversion.rs  conversion_tests.rs  matching.rs  mod.rs
crates/velesdb-core/src/fusion/: mod.rs  strategy.rs  strategy_tests.rs
crates/velesdb-core/src/gpu/: gpu_backend.rs  gpu_backend_tests.rs
crates/velesdb-core/src/index/: bm25.rs  bm25_tests.rs  hnsw.rs  mod.rs  posting_list.rs  posting_list_tests.rs
crates/velesdb-core/src/storage/: async_ops.rs  compaction.rs  guard.rs  histogram.rs  histogram_tests.rs  log_payload.rs  log_payload_tests.rs  loom_tests.rs  mmap.rs  mod.rs  sharded_index.rs  sharded_index_tests.rs  tests.rs  traits.rs  vector_bytes.rs  (+1 more)
crates/velesdb-core/tests/: README.md  crash_recovery_tests.rs  epic_features_integration_tests.rs  integration_scenarios.rs  loom_tests.rs  recall_validation.rs  stress_concurrency_tests.rs  use_cases_integration_tests.rs
crates/velesdb-migrate/: Cargo.toml  README.md  ROADMAP.md  TODO.md
crates/velesdb-migrate/benches/: migration_benchmark.rs
crates/velesdb-migrate/examples/: csv-migration.yaml  elasticsearch-migration.yaml  json-migration.yaml  mongodb-migration.yaml  redis-migration.yaml
crates/velesdb-migrate/src/: config.rs  lib.rs  main.rs  pipeline.rs  retry.rs
crates/velesdb-migrate/tests/: integration_test.rs
crates/velesdb-mobile/: Cargo.toml  README.md
crates/velesdb-mobile/src/: agent.rs  graph.rs  lib.rs  lib_tests.rs  types.rs
crates/velesdb-server/: Cargo.toml  README.md
crates/velesdb-server/src/: lib.rs  main.rs  types.rs
crates/velesdb-server/tests/: api_integration.rs  match_api_tests.rs  query_type_tests.rs
crates/velesdb-wasm/: Cargo.toml  README.md
crates/velesdb-wasm/benches/: persistence_bench.rs  run_bench.js  run_persistence_bench.js  wasm_bench.rs
crates/velesdb-wasm/e2e/: .gitignore  README.md  index.html  package.json  playwright.config.ts
crates/velesdb-wasm/src/: agent.rs  distance.rs  filter.rs  fusion.rs  graph.rs  graph_persistence.rs  graph_tests.rs  graph_worker.rs  lib.rs  lib_tests.rs  persistence.rs  serialization.rs  simd.rs  store_get.rs  store_insert.rs  store_new.rs  store_search.rs  text_search.rs  vector_ops.rs  velesql.rs
crates/velesdb-wasm/tests/: web.rs
demos/tauri-rag-app/src-tauri/: Cargo.toml
examples/mini_recommender/: Cargo.toml  main.rs
examples/rust/: Cargo.toml  multimodel_search.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_snapshot_parser.rs
integrations/langchain-velesdb/: README.md  pyproject.toml
integrations/langchain-velesdb/tests/: __init__.py  test_vectorstore.py
integrations/llamaindex-velesdb/: README.md  pyproject.toml
integrations/llamaindex-velesdb/tests/: test_vectorstore.py
integrations/tauri-plugin-velesdb/: CHANGELOG.md  Cargo.toml  README.md  build.rs
integrations/tauri-plugin-velesdb/guest-js/: index.ts  package.json
integrations/tauri-plugin-velesdb/permissions/: default.toml
integrations/tauri-plugin-velesdb/src/: commands.rs  error.rs  lib.rs  state.rs
(+544 files in other folders)
