[workspace]
resolver = "2"
members = [
    "crates/velesdb-core",
    "crates/velesdb-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "BSL-1.1"
repository = "https://github.com/cyberlife-coder/velesdb"
homepage = "https://velesdb.io"
documentation = "https://docs.velesdb.io"
keywords = ["vector-database", "search", "embeddings", "ann", "hnsw"]
categories = ["database", "data-structures", "algorithms"]
authors = ["VelesDB Team <team@velesdb.io>"]

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Storage
memmap2 = "0.9"
bincode = "1.3"
rkyv = { version = "0.7", features = ["validation"] }

# Indexing
hnsw_rs = "0.3"
simsimd = "4.0"
roaring = "0.10"

# API
axum = "0.7"
tonic = "0.11"
prost = "0.12"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Testing
criterion = "0.5"
proptest = "1.4"
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
lto = true
codegen-units = 1
