[workspace]
resolver = "2"
members = [
    "crates/velesdb-core",
    "crates/velesdb-server",
    "crates/velesdb-python",
    "crates/velesdb-cli",
    "crates/velesdb-wasm",
    "crates/velesdb-migrate",
    "crates/velesdb-mobile",
    "integrations/tauri-plugin-velesdb",
]
exclude = [
    "examples/tauri-rag-app/src-tauri",
]

[workspace.package]
version = "0.8.5"
edition = "2021"
rust-version = "1.83"
license-file = "LICENSE"
repository = "https://github.com/cyberlife-coder/velesdb"
homepage = "https://velesdb.com"
documentation = "https://docs.velesdb.com"
keywords = ["vector-database", "search", "embeddings", "ann", "hnsw"]
categories = ["database", "data-structures", "algorithms"]
authors = ["VelesDB Team <contact@wiscale.fr>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Storage
memmap2 = "0.9"
bincode = "1.3"

# Indexing
# Note: hnsw_rs is defined per-crate with target-specific features
# (simdeez_f on x86_64 only). See crates/velesdb-core/Cargo.toml
roaring = "0.10"

# API
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }
toml = "0.8"

# Testing
criterion = "0.5"
proptest = "1.5"
tempfile = "3.14"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
lto = true
codegen-units = 1
