[package]
name = "velesdb-core"
description = "High-performance vector database engine written in Rust"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file = "LICENSE"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
bincode = { workspace = true }
roaring = { workspace = true }
figment = { workspace = true }
toml = { workspace = true }

# WASM-incompatible deps - only for non-WASM targets
# memmap2 moved to target-specific section below

# HNSW: Native implementation only (v1.0+)
# hnsw_rs dependency removed - native HNSW is 1.2x faster

[dependencies.uuid]
version = "1.7"
features = ["v4", "serde"]

[dependencies.parking_lot]
version = "0.12"

[dependencies.crossbeam-channel]
version = "0.5"

# rayon moved to optional deps section (persistence feature)

[dependencies.arc-swap]
version = "1.7"

[dependencies.bytes]
version = "1.5"

[dependencies.rustc-hash]
version = "2.0"

[dependencies.indexmap]
version = "2.7"

# Lock-free concurrent HashMap for high-throughput parallel operations
[dependencies.dashmap]
version = "5.5"

# CPU detection for auto-tuning parallel config (EPIC-051 US-006)
[dependencies.num_cpus]
version = "1.16"

[dependencies.wide]
version = "0.7"

# GPU acceleration (optional)
[dependencies.wgpu]
version = "23"
optional = true

[dependencies.pollster]
version = "0.4"
optional = true

[dependencies.bytemuck]
version = "1.14"
features = ["derive"]
optional = true

[dependencies.half]
version = "2.4"
features = ["std", "serde"]

# EPIC-033/US-003: Windows hole-punch (FSCTL_SET_ZERO_DATA)
[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.59"
features = ["Win32_Foundation", "Win32_System_Ioctl", "Win32_System_IO"]

# EPIC-033/US-003: Linux hole-punch (fallocate)
[target.'cfg(target_os = "linux")'.dependencies.libc]
version = "0.2"

[dependencies.pest]
version = "2.7"

[dependencies.pest_derive]
version = "2.7"

[features]
# Native HNSW is the only implementation (v1.0+)
# hnsw_rs dependency has been removed
default = ["persistence"]
gpu = ["wgpu", "pollster", "bytemuck"]
# Persistence feature: includes tokio, memmap2, rayon (not WASM-compatible)
# Disable for WASM builds: velesdb-core = { default-features = false }
persistence = ["dep:memmap2", "dep:rayon", "dep:tokio"]
# Update check feature: enables HTTP client for version checking
update-check = ["dep:reqwest", "dep:tokio"]
# Loom feature: enables concurrency testing with loom (EPIC-023)
# Run with: cargo +nightly test --features loom --test loom_tests
loom = ["dep:loom"]

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
tokio-test = "0.4"
serial_test = "3.1"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"

# Loom for concurrency testing (EPIC-023) - optional dependency, not dev-dependency
[dependencies.loom]
version = "0.7"
optional = true

[[example]]
name = "crash_driver"
path = "examples/crash_driver.rs"

[[bench]]
name = "search_benchmark"
harness = false

[[bench]]
name = "hnsw_benchmark"
harness = false

[[bench]]
name = "scalability_benchmark"
harness = false

[[bench]]
name = "wis1_validation"
harness = false

[[bench]]
name = "hnsw_tuning"
harness = false

[[bench]]
name = "filter_benchmark"
harness = false

[[bench]]
name = "velesql_benchmark"
harness = false

[[bench]]
name = "simd_benchmark"
harness = false

[[bench]]
name = "overhead_benchmark"
harness = false

[[bench]]
name = "column_filter_benchmark"
harness = false

[[bench]]
name = "bm25_benchmark"
harness = false

[[bench]]
name = "recall_benchmark"
harness = false

[[bench]]
name = "parallel_benchmark"
harness = false

[[bench]]
name = "import_benchmark"
harness = false

[[bench]]
name = "perf_benchmark"
harness = false

[[bench]]
name = "quantization_benchmark"
harness = false

[[bench]]
name = "gpu_benchmark"
harness = false
required-features = ["gpu"]

[[bench]]
name = "recall_comprehensive"
harness = false

[[bench]]
name = "dual_precision_benchmark"
harness = false

[[bench]]
name = "hnsw_comparison_benchmark"
harness = false

[[bench]]
name = "trigram_benchmark"
harness = false

[[bench]]
name = "concurrency_benchmark"
harness = false

[[bench]]
name = "edge_store_benchmark"
harness = false

[[bench]]
name = "match_parser_benchmark"
harness = false

[[bench]]
name = "similarity_benchmark"
harness = false

[[bench]]
name = "property_index_benchmark"
harness = false

[[bench]]
name = "orderby_similarity_benchmark"
harness = false

[[bench]]
name = "aggregation_benchmark"
harness = false

[[bench]]
name = "velesql_execution_benchmark"
harness = false

[[bench]]
name = "prefetch_tuning_benchmark"
harness = false

[[bench]]
name = "smoke_test"
harness = false

# ============================================================================
# Target-specific dependencies (WASM compatibility)
# ============================================================================

# ============================================================================
# Optional deps for persistence feature (not WASM-compatible)
# ============================================================================
[dependencies.memmap2]
workspace = true
optional = true

[dependencies.rayon]
version = "1.10"
optional = true

[dependencies.tokio]
workspace = true
optional = true

# Update check dependencies
[dependencies.sha2]
version = "0.10"

[dependencies.hex]
version = "0.4"

[dependencies.hostname]
version = "0.4"

[dependencies.whoami]
version = "1.5"

[dependencies.reqwest]
version = "0.11"
features = ["json"]
optional = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
