[package]
name = "velesdb-migrate"
version = "0.6.0"
edition = "2021"
rust-version = "1.83"
license-file = "LICENSE"
repository = "https://github.com/cyberlife-coder/velesdb"
homepage = "https://velesdb.com"
documentation = "https://docs.velesdb.com"
keywords = ["vector-database", "migration", "embeddings", "ai", "velesdb"]
categories = ["database", "command-line-utilities"]
authors = ["Julien Lange <contact@wiscale.fr>"]
description = "Migration tool for importing vectors from other databases into VelesDB"

[[bin]]
name = "velesdb-migrate"
path = "src/main.rs"

[lib]
name = "velesdb_migrate"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# HTTP client for API-based sources
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Database clients
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json"], optional = true }

# Config parsing
serde_yaml = "0.9"

# Progress bars
indicatif = "0.17"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# UUID for point IDs
uuid = { version = "1.11", features = ["v4", "serde"] }

# VelesDB client (for destination)
velesdb-core = { version = "0.6.0", path = "../velesdb-core" }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
tempfile = "3.14"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "migration_benchmark"
harness = false

[features]
default = ["postgres"]
postgres = ["sqlx"]
all-sources = ["postgres"]

