[package]
name = "velesdb-server"
description = "REST API server for VelesDB vector database"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file = "../../LICENSE"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[lib]
name = "velesdb_server"
path = "src/lib.rs"

[[bin]]
name = "velesdb-server"
path = "src/main.rs"

[dependencies]
velesdb-core = { path = "../velesdb-core", version = "1.4.0" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
futures = "0.3"
clap = { version = "4.4", features = ["derive", "env"] }
config = "0.14"

# OpenAPI/Swagger documentation
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[features]
default = []
prometheus = []

[dev-dependencies]
# Use native-tls to avoid ring compilation issues on aarch64-apple-darwin
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
tokio-test = "0.4"
tempfile = { workspace = true }
tower = { workspace = true }
