[package]
name = "velesdb-wasm"
version = "0.1.4"
edition = "2021"
description = "VelesDB for WebAssembly - Vector search in the browser"
license = "BSL-1.1"
repository = "https://github.com/cyberlife-coder/VelesDB"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
wide = "0.7"
half = { version = "2.4", features = ["std", "serde"] }

[dependencies.js-sys]
version = "0.3"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

