[package]
name = "velesdb-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file = "../../LICENSE"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description = "VelesDB for WebAssembly - Vector search in the browser"
keywords = ["vector-database", "wasm", "webassembly", "browser", "search"]
categories = ["database", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
wide = "0.7"
half = { version = "2.4", features = ["std", "serde"] }
# Disable persistence feature for WASM (tokio/mio, memmap2, rayon don't support WASM)
velesdb-core = { path = "../velesdb-core", version = "1.3.1", default-features = false }

[dependencies.js-sys]
version = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Event",
    "DomStringList",
    "IdbFactory",
    "IdbDatabase",
    "IdbObjectStore",
    "IdbObjectStoreParameters",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbRequest",
    "IdbOpenDbRequest",
    "IdbVersionChangeEvent",
    "DomException",
]

[dependencies.wasm-bindgen-futures]
version = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"
serde-wasm-bindgen = "0.6"

# Note: wasm_bench.rs is auto-detected as a bench target
# No explicit [[bench]] needed - Cargo handles it automatically

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

