[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-velesdb"
version = "0.1.0"
description = "LangChain integration for VelesDB vector database"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "VelesDB Team", email = "contact@velesdb.io"}
]
keywords = ["langchain", "velesdb", "vector-database", "embeddings", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "langchain-core>=0.1.0",
    "velesdb>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "langchain>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/cyberlife-coder/VelesDB"
Documentation = "https://velesdb.io/docs/integrations/langchain"
Repository = "https://github.com/cyberlife-coder/VelesDB"

[tool.setuptools.packages.find]
where = ["src"]
