[package]
name = "tauri-plugin-velesdb"
version = "0.5.1"
edition = "2021"
authors = ["Cyberlife Coder"]
description = "Tauri plugin for VelesDB - Vector search in desktop apps"
license-file = "../../LICENSE"
repository = "https://github.com/cyberlife-coder/VelesDB"
keywords = ["tauri", "plugin", "vector", "database", "search"]
categories = ["database", "gui"]
links = "tauri-plugin-velesdb"

[build-dependencies]
tauri-plugin = { version = "2.0", features = ["build"] }

[dependencies]
tauri = { version = "2.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
parking_lot = "0.12"

# VelesDB core dependency (local path for development)
velesdb-core = { path = "../../crates/velesdb-core", version = "0.5.1" }

[dev-dependencies]
tempfile = "3.14"

[features]
default = []
